yamls/tt-pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tt-pod1
spec:
  containers:
   - name: nginx
     image: rancher/windows_exporter-package:v0.0.3
  tolerations:
  - key: "os1"
    operator: "Equal" 
    value: "win"
    effect: "NoSchedule"
